--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -20,7 +20,6 @@ a {
   background-position: center;
   position: relative;
 }
-
 .HeroGroup {
   margin: 0 auto;
   max-width: 500px;
@@ -28,7 +27,31 @@ a {
   text-align: center;
 }
 
+.HeroBio {
+  background: url('../images/isai-ramos-_3SFFsWqCVg-unsplash.jpg');
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.HeroGroupBio {
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 150px 50px;
+  text-align: center;
+}
+
 .Hero h1 {
+  color: white;
+  margin: 0;
+  font-size: 60px;
+  line-height: 1.2;
+  opacity: 0;
+  animation: HeroAnimation 5s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+}
+.HeroBio h1 {
   color: white;
   margin: 0;
   font-size: 60px;
