--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -69,7 +69,7 @@ a {
   animation: HeroAnimation 5s 0.3s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-.Hero a {
+.Hero .Button {
   font-size: 17px;
   font-weight: 600;
   color: white;
@@ -83,7 +83,7 @@ a {
   transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-.Hero a:hover {
+.Hero .Button:hover {
   background: white;
   color: black;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.7);
@@ -130,6 +130,10 @@ a {
   grid-gap: 40px;
   justify-items: center;
   margin: 100px 0;
+}
+
+.SocialIcons a {
+  border: 0px;
 }
 
 @media (max-width: 640px) {
